add most important information

--- a/haystack/index.html
+++ b/haystack/index.html
@@ -1,5 +1,11 @@
 <html>
+    <head>
+        <title>Haystack: A Panoptic Scene Graph Dataset to Evaluate Rare Predicate Classes</title>
+    </head>
     <body>
         This page is work in progress
+
+        <p>The dataset is available here: <a href="https://www.uni-augsburg.de/de/fakultaet/fai/informatik/prof/mmc/research/datensatze/">https://www.uni-augsburg.de/de/fakultaet/fai/informatik/prof/mmc/research/datensatze/</a></p>
+        <p>The code is available here: <a href="https://github.com/lorjul/haystack">https://github.com/lorjul/haystack</a></p>
     </body>
 </html>
