--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+    <head>
+        <title>lorjul</title>
+    </head>
     <body>
         This page is work in progress.
+        <p><a href="haystack/">Haystack: A Panoptic Scene Graph Dataset to Evaluate Rare Predicate Classes</a></p>
     </body>
 </html>
