add uni augsburg

--- a/haystack/index.html
+++ b/haystack/index.html
@@ -20,6 +20,11 @@
                     <li> <a href="https://www.uni-augsburg.de/de/fakultaet/fai/informatik/prof/mmc/team/lienhart/" target="_blank">Prof. Dr. Rainer Lienhart</a>
                     </li>
                 </ul>
+                <ul class="authors affiliations">
+                    <li>
+                        University of Augsburg
+                    </li>
+                </ul>
             </div>
         </div>
 
