--- a/haystack/index.html
+++ b/haystack/index.html
@@ -22,7 +22,7 @@
                 </ul>
                 <ul class="authors affiliations">
                     <li>
-                        University of Augsburg
+                        <a href="https://www.uni-augsburg.de/en/fakultaet/fai/informatik/prof/mmc/about-us/" target="_blank">University of Augsburg</a>
                     </li>
                 </ul>
             </div>
@@ -105,8 +105,6 @@
                 A comparison between our three novel metrics (P-AUC, PDD and PDO) and the traditionally used R@50 metric. The R@50 metric results in 0.0 for most predicates, while our metrics accurately measure the performance of each predicate.
             </p>
             
-
-
 
             <!--
             <h2 id="citation"> Citation </h2>
