update comming soon textx

--- a/haystack/index.html
+++ b/haystack/index.html
@@ -59,13 +59,13 @@
                 <div class="download-links">
                     <ul>
                         <li>
-                            <a href="/" target="_blank"> Paper PDF: Coming Soon </a>
+                            <a href="https://arxiv.org/abs/2309.02286v1" target="_blank"> Paper PDF</a>
                         </li>
                         <li>
-                            <a href="https://www.uni-augsburg.de/de/fakultaet/fai/informatik/prof/mmc/research/datensatze/"  target="_blank">Dataset</a>
+                            <a href="https://www.uni-augsburg.de/de/fakultaet/fai/informatik/prof/mmc/research/datensatze/"  target="_blank">Dataset: Coming end of October</a>
                         </li>
                         <li>
-                            <a href="https://github.com/lorjul/haystack" target="_blank"> Code on GitHub </a>
+                            <a href="https://github.com/lorjul/haystack" target="_blank"> Code on GitHub: Coming end of October</a>
                         </li>
                     </ul>
                 </div>
