fix small type on haystack page

--- a/haystack/index.html
+++ b/haystack/index.html
@@ -39,8 +39,8 @@
                 reliable metrics can be retrieved for the rarest classes. We
                 construct a new panoptic scene graph dataset and a set of
                 metrics that are designed as a benchmark for the predictive performance especially on rare predicate classes. To
-                construct the new dataset, we propose a model-assisted an-
-                notation pipeline that efficiently finds rare predicate classes
+                construct the new dataset, we propose a model-assisted annotation
+                pipeline that efficiently finds rare predicate classes
                 that are hidden in a large set of images like needles in a
                 haystack.
                 Contrary to prior scene graph datasets, Haystack contains explicit negative annotations, i.e. annotations that a
