update code link for Haystack

--- a/haystack/index.html
+++ b/haystack/index.html
@@ -65,7 +65,7 @@
                             <a href="http://myweb.rz.uni-augsburg.de/~lorenjul/haystack/v1/"  target="_blank">Dataset</a>
                         </li>
                         <li>
-                            <a href="https://github.com/lorjul/haystack" target="_blank"> Code on GitHub: Coming end of October</a>
+                            <a href="https://github.com/lorjul/haystack" target="_blank"> Code on GitHub</a>
                         </li>
                     </ul>
                 </div>
