update citation for haystack

--- a/haystack/index.html
+++ b/haystack/index.html
@@ -106,12 +106,17 @@
             </p>
             
 
-            <!--
             <h2 id="citation"> Citation </h2>
             <pre><code>
+@INPROCEEDINGS{lorenz_haystack_23,
+    author={Lorenz, Julian and Barthel, Florian and Kienzle, Daniel and Lienhart, Rainer},
+    booktitle={2023 IEEE/CVF International Conference on Computer Vision Workshops (ICCVW)}, 
+    title={Haystack: A Panoptic Scene Graph Dataset to Evaluate Rare Predicate Classes}, 
+    year={2023},
+    doi={10.1109/ICCVW60793.2023.00013}
+}
 
-            </code></pre>
-            -->
+</code></pre>
 
 
 
