add sgbench to main index, fix sgbench paper title, add github link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>lorjul</title>
     </head>
     <body>
-        This page is work in progress.
         <p><a href="haystack/">Haystack: A Panoptic Scene Graph Dataset to Evaluate Rare Predicate Classes</a></p>
+        <p><a href="sgbench/">A Review and Efficient Implementation of Scene Graph Generation Metrics</a></p>
     </body>
 </html>
