--- a/sgbench/index.html
+++ b/sgbench/index.html
@@ -1,12 +1,12 @@
 <html>
     <head>
         <link rel="stylesheet" href="./style.css">
-        <title>SGBench: A Review and Efficient Implementation of Scene Graph Generation Metrics</title>
+        <title>A Review and Efficient Implementation of Scene Graph Generation Metrics</title>
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Segoe+UI" rel="stylesheet">
     </head>
     <body>
         <div class="n-title">
-            <h1> SGBench: A Review and Efficient Implementation of Scene Graph Generation Metrics </h1>
+            <h1> A Review and Efficient Implementation of Scene Graph Generation Metrics </h1>
         </div>
         <div class="n-byline">
             <div class="byline">
@@ -53,7 +53,7 @@
                             <a href=""> Paper PDF: Coming soon</a>
                         </li>
                         <li>
-                            <a href="https://github.com/lorjul/sgbench">Code on GitHub: Coming soon</a>
+                            <a href="https://github.com/lorjul/sgbench">Code on GitHub</a>
                         </li>
                         <li>
                             <a href="">Benchmarking Server: Coming soon</a>
