update links for CVPR24

--- a/sgbench/index.html
+++ b/sgbench/index.html
@@ -50,13 +50,14 @@
                 <div class="download-links">
                     <ul>
                         <li>
-                            <a href=""> Paper PDF: Coming soon</a>
+                            <a href="https://arxiv.org/abs/2404.09616"> Paper PDF</a>
                         </li>
                         <li>
                             <a href="https://github.com/lorjul/sgbench">Code on GitHub</a>
+                            (for server code, please contact us directly)
                         </li>
                         <li>
-                            <a href="">Benchmarking Server: Coming soon</a>
+                            <a href="https://mlcv-sgbench.informatik.uni-augsburg.de/">Benchmarking Server</a>
                         </li>
                     </ul>
                 </div>
