add link to fair-psgg on index page

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
         <p><a href="haystack/">Haystack: A Panoptic Scene Graph Dataset to Evaluate Rare Predicate Classes</a></p>
         <p><a href="sgbench/">A Review and Efficient Implementation of Scene Graph Generation Metrics</a></p>
+        <p><a href="fair-psgg/">A Fair Ranking and New Model for Panoptic Scene Graph Generation</a></p>
     </body>
 </html>
