add statcounter to fair-psgg

--- a/fair-psgg/index.html
+++ b/fair-psgg/index.html
@@ -365,7 +365,7 @@
 
 <!-- Default Statcounter code for fair psgg https://lorjul.github.io/fair-psgg/
 -->
-<!-- <script type="text/javascript">
+<script type="text/javascript">
   var sc_project=13016289; 
   var sc_invisible=1; 
   var sc_security="f02f557d"; 
@@ -375,7 +375,7 @@
   <noscript><div class="statcounter"><a title="free web stats"
   href="https://statcounter.com/" target="_blank"><img class="statcounter"
   src="https://c.statcounter.com/13016289/0/f02f557d/1/" alt="free web stats"
-  referrerPolicy="no-referrer-when-downgrade"></a></div></noscript> -->
+  referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
   <!-- End of Statcounter Code -->
 
 </body>
