--- a/fair-psgg/index.html
+++ b/fair-psgg/index.html
@@ -109,15 +109,15 @@
                 </span>
 
                 <!-- ArXiv abstract Link -->
-                <!-- <span class="link-block">
-                  <a href="#>" target="_blank"
+                <span class="link-block">
+                  <a href="http://arxiv.org/abs/2407.09216" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
                     <span>arXiv</span>
                   </a>
-                </span> -->
+                </span>
               </div>
             </div>
           </div>
