--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
         <title>lorjul</title>
     </head>
     <body>
-        <p><a href="haystack/">Haystack: A Panoptic Scene Graph Dataset to Evaluate Rare Predicate Classes</a></p>
-        <p><a href="sgbench/">A Review and Efficient Implementation of Scene Graph Generation Metrics</a></p>
-        <p><a href="fair-psgg/">A Fair Ranking and New Model for Panoptic Scene Graph Generation</a></p>
+        <p><a href="haystack/">[ICCVW 2023] Haystack: A Panoptic Scene Graph Dataset to Evaluate Rare Predicate Classes</a></p>
+        <p><a href="sgbench/">[CVPRW 2024] A Review and Efficient Implementation of Scene Graph Generation Metrics</a></p>
+        <p><a href="fair-psgg/">[ECCV 2024] A Fair Ranking and New Model for Panoptic Scene Graph Generation</a></p>
+        <p><a href="compromised-instance-anonymization/">[ICCVW 2025] On the Importance of Conditioning for Privacy-Preserving Data Augmentation</a></p>
+        <p><a href="copasg/">[ICCVW 2025] COPA-SG: Dense Scene Graphs with Parametric and Proto-Relations</a></p>
     </body>
 </html>
