--- a/compromised-instance-anonymization/index.html
+++ b/compromised-instance-anonymization/index.html
@@ -67,7 +67,7 @@
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">University of Augsburg<br>ICCV 2025</span>
+              <span class="author-block">University of Augsburg<br><a href="https://safemmai.github.io/">SafeMM-AI</a> @ <a href="https://iccv.thecvf.com/Conferences/2025">ICCV 2025</a></span>
               <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
             </div>
 
