add bibtex to deano

--- a/compromised-instance-anonymization/index.html
+++ b/compromised-instance-anonymization/index.html
@@ -174,12 +174,19 @@
 
 
   <!--BibTex citation -->
-  <!-- <section class="section" id="BibTeX">
+  <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@InProceedings{conditioning-privacy-lorenz2025,
+    author    = {Lorenz, Julian and Ludwig, Katja and Haug, Valentin and Lienhart, Rainer},
+    title     = {On the Importance of Conditioning for Privacy-Preserving Data Augmentation},
+    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
+    month     = {October},
+    year      = {2025},
+    pages     = {2317-2326}
+}</code></pre>
     </div>
-  </section> -->
+  </section>
   <!--End BibTex citation -->
 
 
@@ -205,7 +212,7 @@
     </div>
   </footer>
 
-<!-- Default Statcounter code for fair psgg https://lorjul.github.io/fair-psgg/
+<!-- Default Statcounter code for fair psgg https://lorjul.github.io/panoptic-scene-graph-generation/
 -->
 <script type="text/javascript">
   var sc_project=13016289; 
