--- a/fair-psgg/index.html
+++ b/fair-psgg/index.html
@@ -99,7 +99,7 @@
 
                 <!-- Github link -->
                 <span class="link-block">
-                  <a href="https://github.com/lorjul/fair-psgg" target="_blank"
+                  <a href="https://github.com/lorjul/panoptic-scene-graph-generation" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
