add bibtex for copa

--- a/copasg/index.html
+++ b/copasg/index.html
@@ -180,12 +180,19 @@
 
 
   <!--BibTex citation -->
-  <!-- <section class="section" id="BibTeX">
+  <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@InProceedings{copa-lorenz2025,
+    author    = {Lorenz, Julian and Phatak, Mrunmai and Sch\"on, Robin and Ludwig, Katja and H\"ormann, Nico and Friedrich, Annemarie and Lienhart, Rainer},
+    title     = {CoPa-SG: Dense Scene Graphs with Parametric and Proto-Relations},
+    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
+    month     = {October},
+    year      = {2025},
+    pages     = {7604-7613}
+}</code></pre>
     </div>
-  </section> -->
+  </section>
   <!--End BibTex citation -->
 
 
